examples/test/testpolicy9900.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9900
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key5: value10
      key16: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value26
          key5: value12
      podSelector:
        matchLabels:
          key16: value36
